--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@firebase/app": "^0.1.9",
+    "@firebase/auth": "^0.3.3",
+    "@firebase/firestore": "^0.3.3",
     "vue": "^2.5.2",
+    "vue-firestore": "^0.2.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
     "vuex": "^3.0.1"
