--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/app": "^0.1.9",
     "@firebase/auth": "^0.3.3",
     "@firebase/firestore": "^0.3.3",
+    "firebase": "^4.10.1",
     "vue": "^2.5.2",
     "vue-firestore": "^0.2.6",
     "vue-router": "^3.0.1",
