--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@firebase/app": "^0.1.10",
     "@firebase/auth": "^0.3.4",
     "@firebase/firestore": "^0.3.4",
+    "neat-csv": "^2.1.0",
+    "readline": "^1.3.0",
     "vue": "^2.5.2",
     "vue-firestore": "^0.2.6",
     "vue-router": "^3.0.1",
